Ajout création adresse + check si l'adresse exist en DB + storage avatar d'un user + delete ancien avatar + update d'un user avec photo de profil + email + firstname + lastname + adresse + doc
